switch to sidebar navigation

--- a/blog/coding_fun.qmd
+++ b/blog/coding_fun.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Coding Fun"
-title-block-banner: green
+title-block-banner: "#373A3C"
 listing: 
   contents: coding_fun/*.qmd
   type: grid
